6.2.0.8 (#1843)
* Update mc-publish.yml (#1735)

* New translations messages.yml (Chinese Simplified) (#1727)

* Add folia support. (#1627)

* Add folia lib, switch over scheduler calls.

* Various source fixes.

* Finish implementing FoliaLib.

* Add folia-enabled to plugin.yml

* update translations manually to reset crowdin

* A few fixes from testing.

* Fix sys out debug message.

* Fix issue with trade_direct.

* Some changes towards 1.21.1

* Make current protocol the default.

* Remove outdated Platform Spec. (#1738)

* update translations manually to reset crowdin

* Update typo in worldguard compatibility.

* Remove outdated platform spec.

* Bump tnil.version from 0.1.7.6-LEGACY-11 to 0.1.7.6-LEGACY-13 (#1725)

Bumps `tnil.version` from 0.1.7.6-LEGACY-11 to 0.1.7.6-LEGACY-13.

Updates `net.tnemc:TNIL-Bukkit` from 0.1.7.6-LEGACY-11 to 0.1.7.6-LEGACY-13

Updates `net.tnemc:TNIL-Core` from 0.1.7.6-LEGACY-11 to 0.1.7.6-LEGACY-13

---
updated-dependencies:
- dependency-name: net.tnemc:TNIL-Bukkit
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: net.tnemc:TNIL-Core
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump com.willfp:EcoEnchants from 12.13.0 to 12.18.4 (#1732)

Bumps com.willfp:EcoEnchants from 12.13.0 to 12.18.4.

---
updated-dependencies:
- dependency-name: com.willfp:EcoEnchants
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump com.willfp:Reforges from 6.65.0 to 6.70.3 (#1731)

Bumps com.willfp:Reforges from 6.65.0 to 6.70.3.

---
updated-dependencies:
- dependency-name: com.w